main add validators and some extra staff